# ichack26

./: .env.example  .gitignore  CLAUDE.md  DATA_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  db.md  docker-compose.yml  progress.txt  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
base_client/: __init__.py  example_usage.py
central_server/: .dockerignore  .gitignore  CLAUDE.md  cloudbuild.yaml  phone_client.py  server.py
client/: websocket_client.py
data_server/: CLAUDE.md  Dockerfile  STATUS_INFERENCE.md  add_london_hospitals.py  assignment_client.py  danger_extractor.py  dashboard_ws.py  data_client.py  data_client_remote.py  geo_utils.py  mock_data.py  news_client.py  phone_client.py  requirements.txt  route_service.py  scheme.md  seed_turkey_earthquake.py  server.py  status_inference.py  tag_extractor.py  test_status_inference.py
front-end/: jest.config.js  jest.setup.js  package-lock.json  package.json
ichack-server/: generate_states.py  news_client.py  requirements.txt  sensor_client.py  server.py
ichack-server-main/: .gitignore  CLAUDE.md  Dockerfile  news_client.py  phone_client.py  server.py
news/: create_balanced_dataset.py  create_final_unified.py  disaster_feeds.py  disasters.json  extend_news.py  fetch_regular_news.py  go.mod  main.go  news.json  news.xml  test_disaster_feeds.py  unified_disaster_news.json
news_server/: CLAUDE.md  convert_xml_to_json.py  fetch_disaster_news.py  fetch_massive_disaster_news.py  go.mod  go.sum  main.go  news_extended.json  run.sh  (+1 more)
(+235 files in other folders)
